style: Fix content is behind top nav

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ ol.no-style, ul.no-style {list-style:none;}
 .floating-data {display:none;}
 
 /* Nav */
-.nav {z-index:10; position:fixed; top:0; left:0; padding:14px; width:100%; height:64px; transition:box-shadow linear 200ms; box-sizing:border-box;}
+.nav {z-index:10; padding:14px; width:100%; height:64px; transition:box-shadow linear 200ms; box-sizing:border-box;}
 .desktop .nav {transform:translateY(-100%);}
 .nav .title {margin-left:14px; line-height:36px; font-size:1.4em;}
 
